--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,41 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font), sans-serif;
+  font-variation-settings: "wght" var(--title-weight), "wdth" 100, "opsz" 0;
+  color: var(--text-color);
+  background-color: var(--bg-clr);
+
+
+
+  background-image:
+    repeating-linear-gradient(90deg, #d3d3d3 20px, transparent);
+    /* linear-gradient(transparent 60%, rgb(220 20 60/0.6) 60%), */
+    /* linear-gradient(90deg, transparent 60%, rgb(220 20 60/0.6) 60%); */
+  /* background-position: cover; */
+  /* background-size: 2px; */
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  /* background-image:
+    linear-gradient(transparent 60%, rgb(220 20 60/0.6) 60%),
+    linear-gradient(90deg, transparent 60%, rgb(220 20 60/0.6) 60%);
+  background-position: center 1em;
+  background-size: 2em 2em; */
+}
+
+
+
+
+
+
+
+
+
+
+@media (width <= 375px) {
+  
 }
