--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,32 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+  --title-weight: 500;
+  --text-weight: 300;
+
+  --bg-clr: rgb(255 255 255);
+  --text-color: rgb(0 0 0);
+  --accent-color: rgb(0 0 0 / 0.6);
+}
+
+:root.theme-dark {
+  --title-weight: 500;
+  --text-weight: 300;
+
+  --bg-clr: rgb(0 0 0);
+  --text-color: rgb(0 204 20);
+  --accent-color: rgb(0 204 20 / 0.6);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --title-weight: 500;
+    --text-weight: 300;
+
+    --bg-clr: rgb(0 0 0);
+    --text-color: rgb(0 204 20);
+    --accent-color: rgb(0 204 20 / 0.6);
+  }
+}
