--- a/styles/themes.css
+++ b/styles/themes.css
@@ -6,30 +6,30 @@
 */
 
 :root.theme-light {
-  --title-weight: 500;
-  --text-weight: 300;
+  --main-font-weight: 500;
+  --accent-font-weight: 300;
 
   --bg-clr: rgb(255 255 255);
-  --text-color: rgb(0 0 0);
+  --main-color: rgb(0 0 0);
   --accent-color: rgb(0 0 0 / 0.6);
 }
 
 :root.theme-dark {
-  --title-weight: 500;
-  --text-weight: 300;
+  --main-font-weight: 700;
+  --accent-font-weight: 300;
 
   --bg-clr: rgb(0 0 0);
-  --text-color: rgb(0 204 20);
+  --main-color: rgb(0 204 20);
   --accent-color: rgb(0 204 20 / 0.6);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --title-weight: 500;
-    --text-weight: 300;
+    --main-font-weight: 700;
+    --accent-font-weight: 400;
 
     --bg-clr: rgb(0 0 0);
-    --text-color: rgb(0 204 20);
+    --main-color: rgb(0 204 20);
     --accent-color: rgb(0 204 20 / 0.6);
   }
 }
