--- a/styles/themes.css
+++ b/styles/themes.css
@@ -6,30 +6,45 @@
 */
 
 :root.theme-light {
-  --main-font-weight: 500;
-  --accent-font-weight: 300;
+  --main-font-weight: 700;
+  --accent-font-weight: 400;
 
   --bg-clr: rgb(255 255 255);
+  --bg-img: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+            repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+            linear-gradient(to bottom, #e7e7e7, #e7e7e7 0.01%, #1a1a1a 100%);
+
   --main-color: rgb(0 0 0);
   --accent-color: rgb(0 0 0 / 0.6);
+  --stroke-color: rgb(255 255 255);
 }
 
 :root.theme-dark {
-  --main-font-weight: 700;
-  --accent-font-weight: 300;
+  --main-font-weight: 785;
+  --accent-font-weight: 465;
 
   --bg-clr: rgb(0 0 0);
+  --bg-img: repeating-linear-gradient(to right, #000 0 2px, transparent 2px 4px),
+            repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+            linear-gradient(to bottom, #007f0c, #004306);
+
   --main-color: rgb(0 204 20);
   --accent-color: rgb(0 204 20 / 0.6);
+  --stroke-color: rgb(0 0 0);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --main-font-weight: 700;
-    --accent-font-weight: 400;
+    --main-font-weight: 785;
+    --accent-font-weight: 465;
 
     --bg-clr: rgb(0 0 0);
+    --bg-img: repeating-linear-gradient(to right, #000 0 2px, transparent 2px 4px),
+              repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+              linear-gradient(to bottom, #007f0c, #004306);
+
     --main-color: rgb(0 204 20);
     --accent-color: rgb(0 204 20 / 0.6);
+    --stroke-color: rgb(0 0 0);
   }
 }
