all that's left is to finish the heart and check everything

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,18 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes row {
+    from {
+        translate: 0 0;
+    }
+
+    50% {
+        translate: 4px 0;
+    }
+
+    to {
+        translate: 0 0;
+    }
+}
+
