--- a/styles/themes.css
+++ b/styles/themes.css
@@ -15,8 +15,8 @@
             linear-gradient(to bottom, #e7e7e7, #e7e7e7 0.01%, #1a1a1a 100%);
 
   --main-color: rgb(0 0 0);
-  --accent-color: rgb(0 0 0 / 0.6);
-  --stroke-color: rgb(255 255 255);
+  --stroke-color: rgb(255 255 255 / 0.5);
+  --btn-txt-clr: rgb(255 255 255);
 }
 
 :root.theme-dark {
@@ -29,8 +29,8 @@
             linear-gradient(to bottom, #007f0c, #004306);
 
   --main-color: rgb(0 204 20);
-  --accent-color: rgb(0 204 20 / 0.6);
-  --stroke-color: rgb(0 0 0);
+  --stroke-color: rgb(0 0 0 / 0.5);
+  --btn-txt-clr: rgb(0 204 20);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -44,7 +44,7 @@
               linear-gradient(to bottom, #007f0c, #004306);
 
     --main-color: rgb(0 204 20);
-    --accent-color: rgb(0 204 20 / 0.6);
-    --stroke-color: rgb(0 0 0);
+    --stroke-color: rgb(0 0 0 / 0.5);
+    --btn-txt-clr: rgb(0 204 20);
   }
 }
