--- a/styles/animations.css
+++ b/styles/animations.css
@@ -14,16 +14,55 @@
 */
 
 @keyframes row {
-    from {
-        translate: 0 0;
-    }
+  from {
+    translate: 0 0;
+  }
 
-    50% {
-        translate: 4px 0;
-    }
+  50% {
+    translate: 4px 0;
+  }
 
-    to {
-        translate: 0 0;
-    }
+  to {
+    translate: 0 0;
+  }
 }
 
+@keyframes scale {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.5);
+  }
+}
+
+@keyframes flash {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes clr-diff {
+  from {
+    color: var(--btn-txt-clr);
+  }
+
+  to {
+    color: var(--main-color);
+  }
+}
+
+@keyframes floppy-clr-diff {
+  from {
+    fill: var(--btn-txt-clr);
+  }
+
+  to {
+    fill: var(--main-color);
+  }
+}
